--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -8,11 +8,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
-        py-version: [3.10, 3.11, 3.12]
+        py-version: ['3.10', 3.11, 3.12]
     steps:
     - name: Set up Python on ${{ matrix.os }}
       uses: actions/setup-python@v5
       with:
-        python-version: ${{matrix.py-version}}
+        python-version: ${{ matrix.py-version }}
         
+
 
