--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 2
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
         py-version: ['3.10', 3.11, 3.12]
@@ -15,5 +16,6 @@ jobs:
       with:
         python-version: ${{ matrix.py-version }}
         
+
 
 
