--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 2
       matrix:
@@ -19,6 +19,7 @@ jobs:
       with:
         python-version: ${{ matrix.py-version }}
         
+
 
 
 
