--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -6,19 +6,16 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 2
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
         py-version: ['3.10', 3.11, 3.12]
-        exclude:
-          - os: macos-14
-            py-version: 3.11
     steps:
-    - name: Set up Python on ${{ matrix.os }}
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.py-version }}
         
+
 
 
 
