--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -9,12 +9,17 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
         py-version: ['3.10', 3.11, 3.12]
+        exclude:
+          - os: macos-14
+            py-version: 3.12
+        
     steps:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.py-version }}
         
+
 
 
 
